add parser feed
